kubernetes/main/apps/office/paperless-ngx/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress-ext.haynesnetwork.com
    external-dns.kubernetes.io/target: ingress-ext.haynesnetwork.com
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/href: "https://paperless.haynesnetwork.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Paperless-NGX
    gethomepage.dev/description: Document management
    gethomepage.dev/icon: paperless-ngx
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`paperless.haynesnetwork.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: paperless-ngx
          port: 80
      middlewares:
        - name: ak-outpost-proxy-provider-external-outpost
          namespace: network
  tls:
    secretName: certificate-haynesnetwork
